test/src/e2e_vm_tests/test_programs/should_pass/impl_self_dependency_order_conflict/src/foo.sw
library;

pub fn foo() -> u32 {
    1
}
