test/src/e2e_vm_tests/test_programs/should_fail/pub_storage/src/main.sw
contract;

pub storage {}

fn foo() -> bool { 0 }
